overview: Slide up transient children as well when sliding shelf up.

Test: manual
Bug: 900281
Change-Id: I96380621d6b10fbf364dbb7e33df9dfa36aa86c7
Reviewed-on: https://chromium-review.googlesource.com/c/1308262
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604385}
Former-commit-id: a796aea5cac80ab76bb14089ec7e93c322b5fbef